sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:3: error: reassignment to val
swap=false
    ^AlgBubbleSort1:5: error: not found: value lg
	for (i<-0 to lg-2){
                     ^AlgBubbleSort1:11: error: reassignment to val
}while (swap=true)
            ^